fix contrast var

--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -33,7 +33,7 @@
   --colors-red: rgba(207, 60, 58, 1);
   --colors-primary: rgba(81, 152, 114, 1);
   --colors-primary-hover: rgba(81, 152, 114, 0.25);
-  --colors-primary-high-contrast: rgba(81, 152, 114, 1);
+  --colors-primary-high-contrast: rgba(70, 129, 90, 1);
   --colors-chess-board-light: rgba(227, 193, 111, 1);
   --colors-chess-board-dark: rgba(184, 139, 74, 1);
   --colors-highlight-wrong: rgba(207, 60, 58, 0.4);
